[18/10/2020 19:43:27] In test_gradle.gradle updated org.springframework.boot from version 9.2.0.RELEASE to 9.3.0.RELEASE 
[18/10/2020 19:43:27] In test_gradle.gradle updated commons-io from version 5.6 to 5.7 
[18/10/2020 19:43:27] In test_gradle_2.gradle updated org.springframework.boot from version 9.2.0.RELEASE to 9.3.0.RELEASE 
[18/10/2020 19:43:27] In test_gradle_2.gradle updated commons-io from version 5.6 to 5.7 