@@ -2,3 +2,13 @@
 [18/10/2020 19:43:27] In test_gradle.gradle updated commons-io from version 5.6 to 5.7 
 [18/10/2020 19:43:27] In test_gradle_2.gradle updated org.springframework.boot from version 9.2.0.RELEASE to 9.3.0.RELEASE 
 [18/10/2020 19:43:27] In test_gradle_2.gradle updated commons-io from version 5.6 to 5.7 
+[20/10/2020 19:06:26] In test_gradle.gradle updated org.springframework.boot from version 2.3.4.RELEASE to 9.3.1.RELEASE 
+[20/10/2020 19:06:26] In test_gradle.gradle updated commons-io from version 2.9 to 5.8 
+[20/10/2020 19:10:57] In test_gradle.gradle updated org.springframework.boot from version 2.3.4.RELEASE to 9.3.1.RELEASE 
+[20/10/2020 19:10:57] In test_gradle.gradle updated commons-io from version 2.9 to 5.8 
+[20/10/2020 19:19:59] In test_gradle.gradle updated org.springframework.boot from version 2.3.4.RELEASE to 9.3.1.RELEASE 
+[20/10/2020 19:19:59] In test_gradle.gradle updated commons-io from version 2.9 to 5.8 
+[20/10/2020 20:03:39] In test_gradle.gradle updated org.springframework.boot from version 9.3.1.RELEASE to 9.3.2.RELEASE 
+[20/10/2020 20:03:39] In test_gradle.gradle updated commons-io from version 5.8 to 5.9 
+[20/10/2020 20:03:39] In test_gradle_2.gradle updated org.springframework.boot from version 9.3.1.RELEASE to 9.3.2.RELEASE 
+[20/10/2020 20:03:39] In test_gradle_2.gradle updated commons-io from version 5.8 to 5.9 
